2004-04-02  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* NEWS: Updated for sane-backends 1.0.14.
	* README.linux: Added some hints about setting permissions with
	  libusb on Linux 2.6. Removed some obsolete paragraphs.
	* config.guess config.sub: Updated from stable libtool.


2004-03-29  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* sanei/sanei_scsi.c: Increased SCSI buffer size on MacOS X.
	  Patch from Mattias Ellert, bug #300601.

2004-03-28  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* backend/gt68xx.c backend/gt68xx_devices.c
	  backend/gt68xx_gt6801.c backend/gt68xx_gt6816.c
	  backend/gt68xx_high.c doc/descriptions/gt68xx.desc
	  doc/gt68xx/gt68xx.CHANGES: Plustek U16B: Added 
	  GT68XX_FLAG_SE_2400. Fixed color order.Increased debug 
	  level for setup_scan. Fixed CCD ocarse calibration.
	* doc/descriptions/microtek.desc: Added Agfa Studiostar.
	* doc/descriptions/unsupported.desc: Added Avigramm Minidoc,
	  Medion MD 41260, and Nikon LS 50 ED. Removed Genius Colorpage
	  Vivid III as it may work with the u12 backend.

2004-03-27  Peter Kirchgessner <peter@kirchgessner.net>

	* backend/hp.c, hp-scl.c, hp.h, doc/sane-hp.man,
	  doc-descriptions/hp.desc: Fix problem with USB-connections
	  on Linux 2.6.x. Add environment SANE_HP_KEPPOPEN... and
	  don't close connections for USB.

2004-03-21  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/unsupported.desc: Added Tevion MD 40420. Moved
	  Plustek OpticPro S(T)28 to genesys.desc.
	* doc/descriptions-external/genesys.desc: Moved Plustek OpticPro
	  S(T)28 to genesys.desc.

2004-03-22  Oliver Schwartz <Oliver.Schwartz@gmx.de>

	* backend/snapscan.h Added detection for Epson 660 by USB ID
	  since new models use new ID strings.

2004-03-21  Henning Meier-Geinitz <henning@meier-geinitz.de>
	
	* backend/mustek.c doc/descriptions/mustek.desc
	  doc/mustek/mustek.CHANGES: Added detection of Mustek ScanExpress
	  1200 FS.